[project]
name = "odoo-addons-oca-l10n-spain"
version = "17.0.20240301.0"
dependencies = [
    "odoo-addon-l10n_es_partner>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_partner_mercantil>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_toponyms>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
