[project]
name = "odoo-addons-oca-l10n-spain"
version = "17.0.20240516.1"
dependencies = [
    "odoo-addon-l10n_es_account_banking_sepa_fsdd>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_account_statement_import_n43>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_aeat>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_aeat_mod111>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_aeat_mod115>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_aeat_mod123>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_aeat_mod303>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_aeat_mod347>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_aeat_mod349>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_aeat_mod390>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_atc>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_partner>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_partner_mercantil>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_toponyms>=17.0dev,<17.1dev",
    "odoo-addon-l10n_es_vat_book>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
